- `analysis/adapter_summary_v0.json`
- `analysis/adapter_findings_v0.json`
- Package/extension ZIP metadata extraction deepened for deterministic manifest signals:
- `.msix/.nupkg/.whl/.jar` manifest text hints are now extracted from ZIP entries (bounded, analysis-only).
- `.crx/.vsix` now parse `manifest.json` when present in ZIP payloads (permissions/content scripts/update URL domain hints).
- Document adapter deepened for `.docm/.xlsm`:
- ZIP structure + relationships are inspected deterministically for macro/embed/external-link indicators.
- IaC/CI adapter extraction deepened:
- Deterministic action reference parsing now distinguishes pinned commit/digest refs from unpinned refs.
- Remote module/source indicators and external runner signals are counted with structured counters in adapter summary output.
- Container adapter extraction deepened:
- OCI layout counts now include manifest and blob counts.
- Container tarball detection can use tar entry metadata (`manifest.json` + `repositories`) for local tar inputs.
- SBOM JSON parsing now emits bounded package/component counts when present.
- Signature/cert adapter extraction deepened:
- Deterministic PEM block counting for certificate/PKCS7/signature material.
- Binary OID hint counts added for CMS signedData and timestamp EKU indicators.
- SCM/source evidence adapter extraction deepened:
- Deterministic repo counters now include tree entry count, branch/tag ref counts, detached HEAD indicator, and working-tree entry count.
- SCM adapter now emits deterministic worktree state evidence (staged/unstaged/untracked counts) and `SCM_WORKTREE_DIRTY` when local repo state is dirty.
- SCM fallback hardening:
- When `git` commands are unavailable/failing, adapter now parses native `.git` reference material (`HEAD`, loose refs, packed-refs) deterministically for source evidence.
- Image adapter extraction deepened: